[tool.poetry]
name = "advent"
version = "0.1.0"
description = ""
authors = ["towa <7078986+towa@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
markdownify = "^0.11.6"
requests = "^2.31.0"
rich = "^13.7.0"
lxml = "^4.9.3"
click = "^8.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
